[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/controls/Controls.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/dynamicfonts/textfont.tres" type="DynamicFont" id=2]

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ExitLabel" type="Label" parent="."]
margin_left = 13.0
margin_top = 13.0
margin_right = 53.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )

[node name="ExitTimer" type="Timer" parent="."]

[connection signal="timeout" from="ExitTimer" to="." method="_on_ExitTimer_timeout"]
